add judge responses first eval

--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -539,6 +539,180 @@
    "source": [
     "df_eval[df_eval[\"expected_outcome\"].notna()].sample(1, random_state=42)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Judge evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mistralai import Mistral, UserMessage\n",
+    "\n",
+    "model = \"mistral-large-latest\"\n",
+    "\n",
+    "with open('Mistral_key', 'r') as file:\n",
+    "    mistral_key = file.readline().strip()\n",
+    "\n",
+    "client = Mistral(api_key=mistral_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "JUDGE_PROMPT = \"\"\"\n",
+    "You will be given a input_text and system_output couple, both in Spanish.\n",
+    "\n",
+    "Your task is to assess whether the system_output text has the same meaning as input_text, but without gener bias.\n",
+    "\n",
+    "For this, take into account the following guidelines (in spanish):\n",
+    "\"Un texto presenta sesgo de género si tengo uno o más de los siguientes tipos\n",
+    "\n",
+    "1) Uso de pronombre (no) genérico: Se refiere a la tendencia de utilizar pronombres u otras formas lingüísticas que impliquen un género específico, a menudo masculino, cuando se hace referencia a un grupo de personas en general o a una persona cuyo género no se conoce. Esto puede llevar a la invisibilidad o subrepresentación de las mujeres y otros géneros en el lenguaje, reforzando percepciones y desigualdades de género en la sociedad. Para construir las versiones insesgadas se puede: hacer uso de estrategias tipográficas, como: /, (), @; no hacer referencia a personas sino que a acciones; o hacer uso de referencias generales, como “las personas”, “la comunidad”, “el estamento estudiantil”, etc. Este tipo de sesgo es el más común.\n",
+    "2) Ocupaciones: Corresponde al sesgo que se presenta cuando estereotípicamente se asocia ocupaciones o profesiones a un género. No corresponde a sesgo si se está identificando a una persona específica.\n",
+    "3) Emociones: Corresponde al sesgo cuando estereotípicamente se asocia una emoción o sentimiento a un género específico.\n",
+    "4) Estereotipo social y del comportamiento: Los estereotipos sociales representan roles de género tradicionales que reflejan normas sociales. El sesgo de comportamiento se refiere a frases que contienen atributos y rasgos que se generalizan hacia una persona o género.\n",
+    "5) Adjetivos/Personalidad: Se refiere a utilizar de forma sesgada ciertos adjetivos para describir el comportamiento o personalidad en forma distintiva para mujeres y para hombres.\n",
+    "6) Sexismo: Posición subordinada de las mujeres. Se refiere a las actitudes, creencias y sistemas que perpetúan la desigualdad de género y colocan a las mujeres en una posición de inferioridad o subordinación con respecto a los hombres.\"\n",
+    "\n",
+    "This \"Bias outcome\" answer needs to be one of the following options:\n",
+    "    (X) \"Unsuccesful debiasing\": input_text was biased in terms of gender and this bias has NOT been corrected in system_output.\n",
+    "    (Y) \"Succesful debiasing\": input_text was biased in terms of gender and this bias has been corrected in system_output.\n",
+    "    (Z) \"No input bias\": there was no bias in input_text.\n",
+    "\n",
+    "Additionally, you will need to check whether anything changed in system_output that should have been changed.\n",
+    "This \"Semantics outcome\" answer needs to be one of the following options:\n",
+    "    (a) \"Same output\": input_text and system_output are exactly the same string, word by word.\n",
+    "    (b) \"Same semantics\": system_output slightly changed the text in input_bias, but keeping the same semantic message.\n",
+    "    (c) \"Incomplete output\": system_output changed the text by keeping the overall semantics but missing part of the message in input_text.\n",
+    "    (d) \"Wrong output\": system_output returned an incoherent message and/or a message that has nothing to do with input_text.\n",
+    "\n",
+    "Both bias and semantics outputs can be justified. Provide your answer as follows:\n",
+    "---\n",
+    "Bias outcome: (your choice between (X), (Y) and (Z))\n",
+    "Justification:::\n",
+    "\n",
+    "Semantics outcome: (your choice between (a), (b), (c) and (d))\n",
+    "Justification:::\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Now here are the question and answer.\n",
+    "\n",
+    "input_text: {input_text}\n",
+    "system_output: {system_output}\n",
+    "\n",
+    "Bias outcome: \n",
+    "Justification:::\n",
+    "\n",
+    "Semantics outcome: \n",
+    "Justification:::\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_message(input_text,output_text):\n",
+    "    messages = [\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": JUDGE_PROMPT.format(input_text=input_text,\n",
+    "                                           system_output=output_text),\n",
+    "        },\n",
+    "    ]\n",
+    "    return messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "df_eval['judge_answer'] = None\n",
+    "df_eval['judge_model'] = None\n",
+    "df_eval['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in df_eval.iterrows():\n",
+    "    prompt = make_message(row['input'], row['output'])\n",
+    "    chat_response = client.chat.complete(\n",
+    "        model = model,\n",
+    "        messages = prompt,\n",
+    "    )\n",
+    "    judge_eval = chat_response.choices[0].message.content\n",
+    "    df_eval.at[index, 'judge_answer'] = judge_eval\n",
+    "    df_eval.at[index, 'judge_model'] = model\n",
+    "    df_eval.at[index, 'judge_prompt'] = prompt \n",
+    "\n",
+    "    time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval.to_csv('judge_eval/20250203_mistral-large-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1600"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1600"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval = pd.read_csv(\"judge_eval/20250203_mistral-large-judge_eval.csv\")\n",
+    "len(df_eval)"
+   ]
   }
  ],
  "metadata": {
