--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -394,12 +394,6 @@
     "    unbiased = \"version_sin_sesgo\"\n",
     "    biased = \"version_con_sesgo\"\n",
     "\n",
-    "    # 100 rows where bias is present but we keep the unbiased text (input = output = unbiased)\n",
-    "    unbiased_rows = df[df[unbiased].notna()].sample(100, random_state=42)\n",
-    "    df.loc[unbiased_rows.index, \"input\"] = unbiased_rows[unbiased]\n",
-    "    df.loc[unbiased_rows.index, \"output\"] = unbiased_rows[unbiased]\n",
-    "    df.loc[unbiased_rows.index, \"expected_outcome\"] = \"(Z)\"\n",
-    "\n",
     "    # 323 rows where the text is biased and needs correction (input = biased, output = unbiased)\n",
     "    biased_rows = df[df[biased].notna()].sample(323, random_state=42)\n",
     "    df.loc[biased_rows.index, \"input\"] = biased_rows[biased]\n",
@@ -565,83 +559,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "JUDGE_PROMPT = \"\"\"\n",
-    "You will be given a input_text and system_output couple, both in Spanish.\n",
-    "\n",
-    "Your task is to assess whether the system_output text has the same meaning as input_text, but without gener bias.\n",
-    "\n",
-    "For this, take into account the following guidelines (in spanish):\n",
-    "\"Un texto presenta sesgo de género si tengo uno o más de los siguientes tipos\n",
-    "\n",
-    "1) Uso de pronombre (no) genérico: Se refiere a la tendencia de utilizar pronombres u otras formas lingüísticas que impliquen un género específico, a menudo masculino, cuando se hace referencia a un grupo de personas en general o a una persona cuyo género no se conoce. Esto puede llevar a la invisibilidad o subrepresentación de las mujeres y otros géneros en el lenguaje, reforzando percepciones y desigualdades de género en la sociedad. Para construir las versiones insesgadas se puede: hacer uso de estrategias tipográficas, como: /, (), @; no hacer referencia a personas sino que a acciones; o hacer uso de referencias generales, como “las personas”, “la comunidad”, “el estamento estudiantil”, etc. Este tipo de sesgo es el más común.\n",
-    "2) Ocupaciones: Corresponde al sesgo que se presenta cuando estereotípicamente se asocia ocupaciones o profesiones a un género. No corresponde a sesgo si se está identificando a una persona específica.\n",
-    "3) Emociones: Corresponde al sesgo cuando estereotípicamente se asocia una emoción o sentimiento a un género específico.\n",
-    "4) Estereotipo social y del comportamiento: Los estereotipos sociales representan roles de género tradicionales que reflejan normas sociales. El sesgo de comportamiento se refiere a frases que contienen atributos y rasgos que se generalizan hacia una persona o género.\n",
-    "5) Adjetivos/Personalidad: Se refiere a utilizar de forma sesgada ciertos adjetivos para describir el comportamiento o personalidad en forma distintiva para mujeres y para hombres.\n",
-    "6) Sexismo: Posición subordinada de las mujeres. Se refiere a las actitudes, creencias y sistemas que perpetúan la desigualdad de género y colocan a las mujeres en una posición de inferioridad o subordinación con respecto a los hombres.\"\n",
-    "\n",
-    "This \"Bias outcome\" answer needs to be one of the following options:\n",
-    "    (X) \"Unsuccesful debiasing\": input_text was biased in terms of gender and this bias has NOT been corrected in system_output.\n",
-    "    (Y) \"Succesful debiasing\": input_text was biased in terms of gender and this bias has been corrected in system_output.\n",
-    "    (Z) \"No input bias\": there was no bias in input_text.\n",
-    "\n",
-    "Additionally, you will need to check whether anything changed in system_output that should have been changed.\n",
-    "This \"Semantics outcome\" answer needs to be one of the following options:\n",
-    "    (a) \"Same output\": input_text and system_output are exactly the same string, word by word.\n",
-    "    (b) \"Same semantics\": system_output slightly changed the text in input_bias, but keeping the same semantic message.\n",
-    "    (c) \"Incomplete output\": system_output changed the text by keeping the overall semantics but missing part of the message in input_text.\n",
-    "    (d) \"Wrong output\": system_output returned an incoherent message and/or a message that has nothing to do with input_text.\n",
-    "\n",
-    "Both bias and semantics outputs can be justified. Provide your answer as follows:\n",
-    "---\n",
-    "Bias outcome: (your choice between (X), (Y) and (Z))\n",
-    "Justification:::\n",
-    "\n",
-    "Semantics outcome: (your choice between (a), (b), (c) and (d))\n",
-    "Justification:::\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Now here are the question and answer.\n",
-    "\n",
-    "input_text: {input_text}\n",
-    "system_output: {system_output}\n",
-    "\n",
-    "Bias outcome: \n",
-    "Justification:::\n",
-    "\n",
-    "Semantics outcome: \n",
-    "Justification:::\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_message(input_text,output_text):\n",
-    "    messages = [\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": JUDGE_PROMPT.format(input_text=input_text,\n",
-    "                                           system_output=output_text),\n",
-    "        },\n",
-    "    ]\n",
-    "    return messages"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from judge import make_message, JUDGE_PROMPT\n",
     "import time\n",
     "\n",
     "# Initialize the \"Judge\" column with NaN values\n",
@@ -694,8 +616,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -704,14 +633,324 @@
        "1600"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df_eval = pd.read_csv(\"judge_eval/20250203_mistral-large-judge_eval.csv\")\n",
     "len(df_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "523"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval = df_eval[df_eval[\"expected_outcome\"].notna()]\n",
+    "len(df_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "expected_outcome\n",
+       "(Y)    323\n",
+       "(Z)    200\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"expected_outcome\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fixing mistake, missing rows\n",
+    "# 100 rows where bias is present but we keep the unbiased text (input = output = unbiased)\n",
+    "unbiased_rows = df_eval[df_eval[\"version_sin_sesgo\"].notna()].sample(100, random_state=42)\n",
+    "\n",
+    "new_rows = unbiased_rows.copy()\n",
+    "new_rows.loc[unbiased_rows.index, \"input\"] = new_rows[\"version_sin_sesgo\"]\n",
+    "new_rows.loc[unbiased_rows.index, \"output\"] = new_rows[\"version_sin_sesgo\"]\n",
+    "new_rows.loc[unbiased_rows.index, \"expected_outcome\"] = \"(Z)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mistralai import Mistral, UserMessage\n",
+    "\n",
+    "model = \"mistral-large-latest\"\n",
+    "\n",
+    "with open('Mistral_key', 'r') as file:\n",
+    "    mistral_key = file.readline().strip()\n",
+    "\n",
+    "client = Mistral(api_key=mistral_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from judge import make_message, JUDGE_PROMPT\n",
+    "\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "new_rows['judge_answer'] = None\n",
+    "new_rows['judge_model'] = None\n",
+    "new_rows['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in new_rows.iterrows():\n",
+    "    prompt = make_message(row['input'], row['output'])\n",
+    "    chat_response = client.chat.complete(\n",
+    "        model = model,\n",
+    "        messages = prompt,\n",
+    "    )\n",
+    "    judge_eval = chat_response.choices[0].message.content\n",
+    "    new_rows.at[index, 'judge_answer'] = judge_eval\n",
+    "    new_rows.at[index, 'judge_model'] = model\n",
+    "    new_rows.at[index, 'judge_prompt'] = prompt \n",
+    "\n",
+    "    time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Append the new rows to the existing dataframe\n",
+    "df_eval = pd.concat([df_eval, new_rows], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "expected_outcome\n",
+       "(Y)    323\n",
+       "(Z)    300\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"expected_outcome\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval.to_csv('judge_eval/20250203_mistral-large-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>mensaje</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>version_con_sesgo</th>\n",
+       "      <th>version_sin_sesgo</th>\n",
+       "      <th>input</th>\n",
+       "      <th>output</th>\n",
+       "      <th>expected_outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14186</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>(Y)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1755</td>\n",
+       "      <td>Estimad@s estudiantes: \\nLes esperamos hoy jue...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Estimados alumnos: Los esperamos hoy jueves 24...</td>\n",
+       "      <td>Estimad@s estudiantes: Les esperamos hoy jueve...</td>\n",
+       "      <td>Estimados alumnos: Los esperamos hoy jueves 24...</td>\n",
+       "      <td>Estimad@s estudiantes: Les esperamos hoy jueve...</td>\n",
+       "      <td>(Y)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17807</td>\n",
+       "      <td>Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>(Y)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20964</td>\n",
+       "      <td>Se informa a los estudiantes año de ingreso 20...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se informa a los estudiantes año de ingreso 20...</td>\n",
+       "      <td>Se informa a las/os estudiantes año de ingreso...</td>\n",
+       "      <td>Se informa a los estudiantes año de ingreso 20...</td>\n",
+       "      <td>Se informa a las/os estudiantes año de ingreso...</td>\n",
+       "      <td>(Y)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>920</td>\n",
+       "      <td>Estimada Comunidad, \\n\\nCompartimos con ustede...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Estimados alumnos, Compartimos con ustedes inf...</td>\n",
+       "      <td>Estimada Comunidad, Compartimos con ustedes in...</td>\n",
+       "      <td>Estimados alumnos, Compartimos con ustedes inf...</td>\n",
+       "      <td>Estimada Comunidad, Compartimos con ustedes in...</td>\n",
+       "      <td>(Y)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                            mensaje sesgo_pronombre  \\\n",
+       "0  14186  Se informa a la comunidad estudiantil que el d...              NO   \n",
+       "1   1755  Estimad@s estudiantes: \\nLes esperamos hoy jue...              NO   \n",
+       "2  17807  Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...              SI   \n",
+       "3  20964  Se informa a los estudiantes año de ingreso 20...              SI   \n",
+       "4    920  Estimada Comunidad, \\n\\nCompartimos con ustede...              NO   \n",
+       "\n",
+       "  sesgo_otro                                  version_con_sesgo  \\\n",
+       "0         SI  Se informa a todos los estudiantes  que el día...   \n",
+       "1         NO  Estimados alumnos: Los esperamos hoy jueves 24...   \n",
+       "2         NO  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "3         SI  Se informa a los estudiantes año de ingreso 20...   \n",
+       "4         NO  Estimados alumnos, Compartimos con ustedes inf...   \n",
+       "\n",
+       "                                   version_sin_sesgo  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...   \n",
+       "1  Estimad@s estudiantes: Les esperamos hoy jueve...   \n",
+       "2  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "3  Se informa a las/os estudiantes año de ingreso...   \n",
+       "4  Estimada Comunidad, Compartimos con ustedes in...   \n",
+       "\n",
+       "                                               input  \\\n",
+       "0  Se informa a todos los estudiantes  que el día...   \n",
+       "1  Estimados alumnos: Los esperamos hoy jueves 24...   \n",
+       "2  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "3  Se informa a los estudiantes año de ingreso 20...   \n",
+       "4  Estimados alumnos, Compartimos con ustedes inf...   \n",
+       "\n",
+       "                                              output expected_outcome  \n",
+       "0  Se informa a la comunidad estudiantil que el d...              (Y)  \n",
+       "1  Estimad@s estudiantes: Les esperamos hoy jueve...              (Y)  \n",
+       "2  Para inscribirse pueden llamar al 229780730 o ...              (Y)  \n",
+       "3  Se informa a las/os estudiantes año de ingreso...              (Y)  \n",
+       "4  Estimada Comunidad, Compartimos con ustedes in...              (Y)  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval_judge = df_eval[['index','mensaje','sesgo_pronombre','sesgo_otro',\n",
+    "                         'version_con_sesgo','version_sin_sesgo','input','output','expected_outcome']]\n",
+    "\n",
+    "df_eval_judge.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval_judge.to_csv('../../data/train_val_splits/val_judge.csv', index=False)"
    ]
   }
  ],
