update judge, improving

--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -602,6 +602,7 @@
    "outputs": [],
    "source": [
     "from judge import make_message, JUDGE_PROMPT\n",
+    "# as in version: https://github.com/alcazar90/spanish-gender-debias/tree/0a8822a4b2dea2935b79e62ff8e2d85bfc83336d\n",
     "import time\n",
     "\n",
     "# Initialize the \"Judge\" column with NaN values\n",
@@ -1016,15 +1017,352 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Testing Judge prompt completely in Spanish"
+    "## Testing Judge prompt completely in Spanish\n",
+    "\n",
+    "- We remove the distinction between exact same text and semantically same text.\n",
+    "- we translate the instructions to Spanish so the whole prompt is in example\n",
+    "- we emphasise the need of debiasing articles that denote gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>mensaje</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>version_con_sesgo</th>\n",
+       "      <th>version_sin_sesgo</th>\n",
+       "      <th>input</th>\n",
+       "      <th>output</th>\n",
+       "      <th>expected_outcome</th>\n",
+       "      <th>expected_semantics_output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14186</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>(Y)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17807</td>\n",
+       "      <td>Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>(Y)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                            mensaje sesgo_pronombre  \\\n",
+       "0  14186  Se informa a la comunidad estudiantil que el d...              NO   \n",
+       "1  17807  Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...              SI   \n",
+       "\n",
+       "  sesgo_otro                                  version_con_sesgo  \\\n",
+       "0         SI  Se informa a todos los estudiantes  que el día...   \n",
+       "1         NO  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                   version_sin_sesgo  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                               input  \\\n",
+       "0  Se informa a todos los estudiantes  que el día...   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                              output expected_outcome  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...              (Y)   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...              (Y)   \n",
+       "\n",
+       "  expected_semantics_output  \n",
+       "0                       (a)  \n",
+       "1                       (a)  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_eval = pd.read_csv('../../data/train_val_splits/val_judge.csv')\n",
+    "df_eval['expected_semantics_output'] = \"(a)\"\n",
+    "df_eval.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from mistralai import Mistral, UserMessage\n",
+    "from judge import make_message\n",
+    "\n",
+    "model = \"mistral-large-latest\"\n",
+    "\n",
+    "with open('Mistral_key', 'r') as file:\n",
+    "    mistral_key = file.readline().strip()\n",
+    "\n",
+    "client = Mistral(api_key=mistral_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "df_eval['judge_answer'] = None\n",
+    "df_eval['judge_model'] = None\n",
+    "df_eval['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in df_eval.iterrows():\n",
+    "    prompt = make_message(row['input'], row['output'])\n",
+    "    chat_response = client.chat.complete(\n",
+    "        model = model,\n",
+    "        messages = prompt,\n",
+    "    )\n",
+    "    judge_eval = chat_response.choices[0].message.content\n",
+    "    df_eval.at[index, 'judge_answer'] = judge_eval\n",
+    "    df_eval.at[index, 'judge_model'] = model\n",
+    "    df_eval.at[index, 'judge_prompt'] = prompt \n",
+    "\n",
+    "    time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval.to_csv('judge_eval/20250204_mistral-large-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "450"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval = pd.read_csv('judge_eval/20250204_mistral-large-judge_eval.csv')\n",
+    "len(df_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval[\"bias_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado de sesgo: (\\(\\w+\\))')\n",
+    "df_eval[\"semantics_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado semántico: (\\(\\w+\\))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bias_answer\n",
+       "(Z)    233\n",
+       "(Y)    141\n",
+       "(X)     76\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"bias_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "semantics_answer\n",
+       "(a)    449\n",
+       "(c)      1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"semantics_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7489\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         (X)       0.82      0.41      0.55       150\n",
+      "         (Y)       0.97      0.91      0.94       150\n",
+      "         (Z)       0.59      0.92      0.72       150\n",
+      "\n",
+      "    accuracy                           0.75       450\n",
+      "   macro avg       0.79      0.75      0.74       450\n",
+      "weighted avg       0.79      0.75      0.74       450\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[ 62   1  87]\n",
+      " [  5 137   8]\n",
+      " [  9   3 138]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "df_eval = df_eval[df_eval[\"bias_answer\"].notna()]\n",
+    "\n",
+    "# Ensure target and outcome are categorical and have the same possible values\n",
+    "classes = [\"(X)\", \"(Y)\", \"(Z)\"]\n",
+    "\n",
+    "# Compute accuracy\n",
+    "accuracy = accuracy_score(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"])\n",
+    "\n",
+    "# Compute classification report (precision, recall, f1-score)\n",
+    "report = classification_report(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], target_names=classes)\n",
+    "\n",
+    "# Compute confusion matrix\n",
+    "conf_matrix = confusion_matrix(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], labels=classes)\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(\"\\nClassification Report:\\n\", report)\n",
+    "print(\"\\nConfusion Matrix:\\n\", conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input:  Los proyectos serán evaluados por un jurado de especialistas de la industria, referentes del ecosistema emprendedor, académicos y emprendedores.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: El texto de entrada input_text no presenta sesgo de género. La frase \"Los proyectos serán evaluados por un jurado de especialistas de la industria, referentes del ecosistema emprendedor, académicos y emprendedores\" no utiliza pronombre (no) genérico, no asocia ocupaciones a un género específico, no asocia emociones a un género específico, no refleja estereotipos sociales ni de comportamiento, no utiliza adjetivos/personalidad de manera sesgada y no perpetúa actitudes de sexismo.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos, por lo que mantienen el mismo mensaje semántico. No hay cambios en el contenido ni en la estructura del texto.\n",
+      "--- \n",
+      "\n",
+      "input:  Se informa a los estudiantes año de ingreso 2015,  que por disposición de la Unidad de Normalización, l@s estudiantes que se encuentran en la nómina adjunta deberán firmar Pagaré de Fondo Solidario de Crédito Universitario.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: No había sesgo de género en el texto de entrada. El uso de \"l@s estudiantes\" ya es una forma inclusiva de referirse a los estudiantes, abarcando tanto a estudiantes masculinos como femeninos.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos, por lo que mantienen exactamente el mismo mensaje semántico.\n",
+      "--- \n",
+      "\n",
+      "input:  Estimados, estimadas estudiantes de postgrado, Te invitamos a votar para la elección de Consejeros Estudiantiles ante el consejo de Escuela de Postgrado, este Jueves 27 de mayo de 09.00 a 17.00 hrs a través de UCAMPUS.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: No había sesgo de género en input_text. El texto ya utiliza la fórmula \"Estimados, estimadas estudiantes\" para incluir a ambos géneros de manera inclusiva. Además, no hay otros elementos en el texto que presenten sesgo de género.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos, por lo que el mensaje semántico se mantiene sin cambios.\n",
+      "--- \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(X)\") & (df_eval['bias_answer'] == \"(Z)\")].sample(3, random_state=42).iterrows():\n",
+    "    print('input: ',answer['input'])\n",
+    "    print(answer['judge_answer'],'\\n')"
+   ]
   }
  ],
  "metadata": {
