update judge eval, smaller mistral

--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -1494,6 +1494,7 @@
    "source": [
     "from mistralai import Mistral, UserMessage\n",
     "from judge import make_message\n",
+    "# as in: https://github.com/alcazar90/spanish-gender-debias/tree/3b224af24d26cfc1a525f8ab0dd06b67f2a835cf\n",
     "\n",
     "model = \"mistral-large-latest\"\n",
     "\n",
@@ -1687,6 +1688,338 @@
       "Resultado semántico: (a)\n",
       "Justificación::: Ambos textos son idénticos y mantienen el mismo mensaje semántico. No se ha cambiado nada en el texto de salida del sistema.\n",
       "--- \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, answer in df_eval[(df_eval['expected_outcome'] == \"(X)\") & (df_eval['bias_answer'] == \"(Z)\")].sample(3, random_state=42).iterrows():\n",
+    "    print('input: ',answer['input'])\n",
+    "    print(answer['judge_answer'],'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Trying out a smaller model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>mensaje</th>\n",
+       "      <th>sesgo_pronombre</th>\n",
+       "      <th>sesgo_otro</th>\n",
+       "      <th>version_con_sesgo</th>\n",
+       "      <th>version_sin_sesgo</th>\n",
+       "      <th>input</th>\n",
+       "      <th>output</th>\n",
+       "      <th>expected_outcome</th>\n",
+       "      <th>expected_semantics_output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14186</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>Se informa a todos los estudiantes  que el día...</td>\n",
+       "      <td>Se informa a la comunidad estudiantil que el d...</td>\n",
+       "      <td>(Y)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17807</td>\n",
+       "      <td>Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...</td>\n",
+       "      <td>SI</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>Para inscribirse pueden llamar al 229780730 o ...</td>\n",
+       "      <td>(Y)</td>\n",
+       "      <td>(a)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                            mensaje sesgo_pronombre  \\\n",
+       "0  14186  Se informa a la comunidad estudiantil que el d...              NO   \n",
+       "1  17807  Estimada Comunidad: \\n\\n\\n_x000D_\\nLa Unidad d...              SI   \n",
+       "\n",
+       "  sesgo_otro                                  version_con_sesgo  \\\n",
+       "0         SI  Se informa a todos los estudiantes  que el día...   \n",
+       "1         NO  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                   version_sin_sesgo  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                               input  \\\n",
+       "0  Se informa a todos los estudiantes  que el día...   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...   \n",
+       "\n",
+       "                                              output expected_outcome  \\\n",
+       "0  Se informa a la comunidad estudiantil que el d...              (Y)   \n",
+       "1  Para inscribirse pueden llamar al 229780730 o ...              (Y)   \n",
+       "\n",
+       "  expected_semantics_output  \n",
+       "0                       (a)  \n",
+       "1                       (a)  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_eval = pd.read_csv('../../data/train_val_splits/val_judge.csv')\n",
+    "df_eval['expected_semantics_output'] = \"(a)\"\n",
+    "df_eval.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mistralai import Mistral, UserMessage\n",
+    "from judge import make_message\n",
+    "# as in: https://github.com/alcazar90/spanish-gender-debias/tree/3b224af24d26cfc1a525f8ab0dd06b67f2a835cf\n",
+    "\n",
+    "model = \"mistral-small-latest\"  # changing to smaller model\n",
+    "\n",
+    "with open('Mistral_key', 'r') as file:\n",
+    "    mistral_key = file.readline().strip()\n",
+    "\n",
+    "client = Mistral(api_key=mistral_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# Initialize the \"Judge\" column with NaN values\n",
+    "df_eval['judge_answer'] = None\n",
+    "df_eval['judge_model'] = None\n",
+    "df_eval['judge_prompt'] = None\n",
+    "\n",
+    "# Iterate over rows to populate the \"Judge\" column\n",
+    "for index, row in df_eval.iterrows():\n",
+    "    prompt = make_message(row['input'], row['output'])\n",
+    "    chat_response = client.chat.complete(\n",
+    "        model = model,\n",
+    "        messages = prompt,\n",
+    "    )\n",
+    "    judge_eval = chat_response.choices[0].message.content\n",
+    "    df_eval.at[index, 'judge_answer'] = judge_eval\n",
+    "    df_eval.at[index, 'judge_model'] = model\n",
+    "    df_eval.at[index, 'judge_prompt'] = prompt \n",
+    "\n",
+    "    time.sleep(0.2)  # we will never exceed the rate this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval.to_csv('judge_eval/20250204_mistral-small-judge_eval.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_eval[\"bias_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado de sesgo: (\\(\\w+\\))')\n",
+    "df_eval[\"semantics_answer\"] = df_eval[\"judge_answer\"].str.extract(r'Resultado semántico: (\\(\\w+\\))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bias_answer\n",
+       "(Z)    277\n",
+       "(Y)    135\n",
+       "(X)     36\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"bias_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "semantics_answer\n",
+       "(a)    446\n",
+       "(c)      2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eval[\"semantics_answer\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5714\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         (X)       0.36      0.09      0.14       149\n",
+      "         (Y)       0.90      0.81      0.85       149\n",
+      "         (Z)       0.44      0.81      0.57       150\n",
+      "\n",
+      "    accuracy                           0.57       448\n",
+      "   macro avg       0.57      0.57      0.52       448\n",
+      "weighted avg       0.57      0.57      0.52       448\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[ 13   2 134]\n",
+      " [  7 121  21]\n",
+      " [ 16  12 122]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "df_eval = df_eval[df_eval[\"bias_answer\"].notna()]\n",
+    "\n",
+    "# Ensure target and outcome are categorical and have the same possible values\n",
+    "classes = [\"(X)\", \"(Y)\", \"(Z)\"]\n",
+    "\n",
+    "# Compute accuracy\n",
+    "accuracy = accuracy_score(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"])\n",
+    "\n",
+    "# Compute classification report (precision, recall, f1-score)\n",
+    "report = classification_report(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], target_names=classes)\n",
+    "\n",
+    "# Compute confusion matrix\n",
+    "conf_matrix = confusion_matrix(df_eval[\"expected_outcome\"], df_eval[\"bias_answer\"], labels=classes)\n",
+    "\n",
+    "# Display results\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(\"\\nClassification Report:\\n\", report)\n",
+    "print(\"\\nConfusion Matrix:\\n\", conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input:  Para verificar la vigencia de tu cédula de identidad (chileno/a y extranjero/a), ingresa  AQUÍ .\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: No había sesgo de género en input_text. El texto utiliza la terminología inclusiva \"chileno/a y extranjero/a\", lo cual ya abarca ambos géneros sin sesgos.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos, manteniendo el mismo mensaje semántico y sin cambios en la información proporcionada.\n",
+      "---\n",
+      "``` \n",
+      "\n",
+      "input:  La Biblioteca Central de la FCFM invita los beauchefianos a la inauguración de la Exposición \"Memorias en movimiento.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: No había sesgo de género en el texto de entrada. La frase no contiene pronombres ni términos que impliquen un género específico, y no hay ocupaciones, emociones ni estereotipos sociales que sugieran una asociación de género.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son exactamente los mismos, por lo que mantienen la misma semántica.\n",
+      "---\n",
+      "``` \n",
+      "\n",
+      "input:  Por disposición de la unidad de Aranceles, los estudiantes adjuntos en nómina deben firmar pagaré de Fondo Solidario para formalizar la asignación del beneficio.\n",
+      "---\n",
+      "Resultado de sesgo: (Z)\n",
+      "Justificación::: No hay sesgo de género en el texto de entrada. El uso de \"los estudiantes\" es genérico y no hay referencias específicas a género, ocupaciones, emociones, estereotipos sociales, adjetivos/personalidad o sexismo.\n",
+      "\n",
+      "Resultado semántico: (a)\n",
+      "Justificación::: Ambos textos son idénticos y tienen el mismo mensaje semántico.\n",
+      "---\n",
+      "\n",
+      "En este caso, el texto de entrada no presenta ningún tipo de sesgo de género y la salida del sistema es exactamente la misma, por lo que no hay cambios en la semántica. \n",
       "\n"
      ]
     }
